[gd_scene load_steps=11 format=3 uid="uid://cgnr6efrarcp8"]

[ext_resource type="Script" path="res://Scenes/Encounters/boarder_ship.gd" id="1_37p11"]
[ext_resource type="Texture2D" uid="uid://i8tr56tch2ym" path="res://Sprites/Boarder ship.png" id="1_hxqlh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6x1s8"]
atlas = ExtResource("1_hxqlh")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdewf"]
atlas = ExtResource("1_hxqlh")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5h72"]
atlas = ExtResource("1_hxqlh")
region = Rect2(400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_60by4"]
atlas = ExtResource("1_hxqlh")
region = Rect2(0, 200, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwnsn"]
atlas = ExtResource("1_hxqlh")
region = Rect2(200, 200, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6wb3"]
atlas = ExtResource("1_hxqlh")
region = Rect2(400, 200, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_jm5rn"]
atlas = ExtResource("1_hxqlh")
region = Rect2(0, 400, 200, 200)

[sub_resource type="SpriteFrames" id="SpriteFrames_outrs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6x1s8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6x1s8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6x1s8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6x1s8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6x1s8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdewf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5h72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60by4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwnsn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6wb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jm5rn")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[node name="BoarderShip" type="Node2D"]
position = Vector2(2069, -126)
script = ExtResource("1_37p11")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_outrs")

[node name="LeaveTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="LeaveTimer" to="." method="_on_leave_timer_timeout"]
